z-index issue fix in transaction history calender

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -1225,6 +1225,10 @@ div.tabs-container {
 			}
 		}
 	}
+
+	.react-datepicker-popper {
+		z-index: 4;
+	}
 }
 
 .recent-transactions {
